Add exception to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Scratch files
+# These files are used for testing and experimentation. They should not be committed to the repository.
+scratch.js
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
